--- a/notebook/Suspended.ipynb
+++ b/notebook/Suspended.ipynb
@@ -1,6 +1,433 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a996418",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(3600000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 3600 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.pyplot import figure\n",
+    "import datetime\n",
+    "import plotly.express as px\n",
+    "import math\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import time\n",
+    "from time import perf_counter\n",
+    "import glob\n",
+    "import tweets_utils\n",
+    "import csv\n",
+    "import importlib\n",
+    "import seaborn as sns\n",
+    "%autosave 3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "126dcbcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/not_found/\")\n",
+    "issues = pd.read_csv(path[0] + \"users_not_found.csv\", low_memory=False, lineterminator=\"\\n\")\n",
+    "suspended = pd.read_csv(path[0] + \"users_not_found_inspected.csv\", low_memory=False, lineterminator=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e74fc082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>screen_name</th>\n",
+       "      <th>not_found</th>\n",
+       "      <th>code</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>649</th>\n",
+       "      <td>6044332</td>\n",
+       "      <td>CookKCEgyptian</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>791</th>\n",
+       "      <td>7154912</td>\n",
+       "      <td>Jeapam</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>792</th>\n",
+       "      <td>7154912</td>\n",
+       "      <td>xiscan1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>830</th>\n",
+       "      <td>7404072</td>\n",
+       "      <td>Robert33829889</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483</th>\n",
+       "      <td>12004852</td>\n",
+       "      <td>marshalotis</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99215</th>\n",
+       "      <td>1257676687359254528</td>\n",
+       "      <td>TravelWithMOW</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99240</th>\n",
+       "      <td>1258056656728076288</td>\n",
+       "      <td>SoloPocono2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99288</th>\n",
+       "      <td>1258831196479504384</td>\n",
+       "      <td>teresawonline</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99299</th>\n",
+       "      <td>1259069865903763456</td>\n",
+       "      <td>Mista_Craw4ed</td>\n",
+       "      <td>True</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>User not found.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99344</th>\n",
+       "      <td>1259973534442491905</td>\n",
+       "      <td>swon26</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>952 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        id     screen_name  not_found  code  \\\n",
+       "649                6044332  CookKCEgyptian       True  63.0   \n",
+       "791                7154912          Jeapam       True  50.0   \n",
+       "792                7154912         xiscan1       True  50.0   \n",
+       "830                7404072  Robert33829889       True  50.0   \n",
+       "1483              12004852     marshalotis       True  63.0   \n",
+       "...                    ...             ...        ...   ...   \n",
+       "99215  1257676687359254528   TravelWithMOW       True  50.0   \n",
+       "99240  1258056656728076288     SoloPocono2       True  50.0   \n",
+       "99288  1258831196479504384   teresawonline       True  63.0   \n",
+       "99299  1259069865903763456   Mista_Craw4ed       True  50.0   \n",
+       "99344  1259973534442491905          swon26       True  63.0   \n",
+       "\n",
+       "                        message  \n",
+       "649    User has been suspended.  \n",
+       "791             User not found.  \n",
+       "792             User not found.  \n",
+       "830             User not found.  \n",
+       "1483   User has been suspended.  \n",
+       "...                         ...  \n",
+       "99215           User not found.  \n",
+       "99240           User not found.  \n",
+       "99288  User has been suspended.  \n",
+       "99299           User not found.  \n",
+       "99344  User has been suspended.  \n",
+       "\n",
+       "[952 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "issues.loc[(issues[\"code\"].notna())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a5ea85f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_suspended = list(suspended.loc[(suspended['code']==63)][\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2f91734c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>screen_name</th>\n",
+       "      <th>not_found</th>\n",
+       "      <th>code</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>649</th>\n",
+       "      <td>6044332</td>\n",
+       "      <td>CookKCEgyptian</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483</th>\n",
+       "      <td>12004852</td>\n",
+       "      <td>marshalotis</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1921</th>\n",
+       "      <td>14194329</td>\n",
+       "      <td>KatwalBibika</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2743</th>\n",
+       "      <td>14992551</td>\n",
+       "      <td>parabuy</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3408</th>\n",
+       "      <td>15720622</td>\n",
+       "      <td>jhakailashkumar</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99072</th>\n",
+       "      <td>1255854351425421313</td>\n",
+       "      <td>SatiricusRex</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99141</th>\n",
+       "      <td>1256636223604416512</td>\n",
+       "      <td>TPE_connect</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99195</th>\n",
+       "      <td>1257344497463287808</td>\n",
+       "      <td>FinTechZoom</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99288</th>\n",
+       "      <td>1258831196479504384</td>\n",
+       "      <td>teresawonline</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99344</th>\n",
+       "      <td>1259973534442491905</td>\n",
+       "      <td>swon26</td>\n",
+       "      <td>True</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>User has been suspended.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>649 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        id      screen_name  not_found  code  \\\n",
+       "649                6044332   CookKCEgyptian       True  63.0   \n",
+       "1483              12004852      marshalotis       True  63.0   \n",
+       "1921              14194329     KatwalBibika       True  63.0   \n",
+       "2743              14992551          parabuy       True  63.0   \n",
+       "3408              15720622  jhakailashkumar       True  63.0   \n",
+       "...                    ...              ...        ...   ...   \n",
+       "99072  1255854351425421313     SatiricusRex       True  63.0   \n",
+       "99141  1256636223604416512      TPE_connect       True  63.0   \n",
+       "99195  1257344497463287808      FinTechZoom       True  63.0   \n",
+       "99288  1258831196479504384    teresawonline       True  63.0   \n",
+       "99344  1259973534442491905           swon26       True  63.0   \n",
+       "\n",
+       "                        message  \n",
+       "649    User has been suspended.  \n",
+       "1483   User has been suspended.  \n",
+       "1921   User has been suspended.  \n",
+       "2743   User has been suspended.  \n",
+       "3408   User has been suspended.  \n",
+       "...                         ...  \n",
+       "99072  User has been suspended.  \n",
+       "99141  User has been suspended.  \n",
+       "99195  User has been suspended.  \n",
+       "99288  User has been suspended.  \n",
+       "99344  User has been suspended.  \n",
+       "\n",
+       "[649 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "issues[issues.id.isin(ids_suspended)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "256f6d01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
