Add 300 good users

--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -72,12 +72,6 @@
     "    - [Louvain](#louvain_2)  \n",
     "\n",
     "\n",
-    "- [Network Community 5](#comm_5)\n",
-    "\n",
-    "    - [Info](#info_5)\n",
-    "    - [Louvain](#louvain_5)\n",
-    "\n",
-    "\n",
     "- [Network Community 19](#comm_19)\n",
     "\n",
     "    - [Info](#info_19)\n",
@@ -272,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  1.6083908999999998\n"
+      "Time:  1.3891360000000077\n"
      ]
     }
    ],
@@ -289,37 +283,6 @@
     "louvain_1 = read_from_json(louvain_path)\n",
     "ccdh_rt_flt_1 = ccdh_rt[ccdh_rt.user_screen_name.isin([x for x in louvain_1])]\n",
     "good_rt_flt_1 = good_rt[good_rt.user_screen_name.isin([x for x in louvain_1])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Paxman42\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in louvain_1:\n",
-    "#     if i in list(bad_dozen[\"screen_name\"]):\n",
-    "    print(i)\n",
-    "    print(louvain_1.get(i))\n",
-    "    break\n",
-    "# bad_flt_1 = bad_dozen[bad_dozen.screen_name.isin([x for x in louvain_2])]\n",
-    "# bad_flt_1\n",
-    "\n",
-    "# mercola\n",
-    "# RobertKennedyJr\n",
-    "# BusyDrT \n",
-    "# DrButtar\n",
-    "# unhealthytruth \n",
-    "# DrChrisNorthrup\n"
    ]
   },
   {
@@ -393,6 +356,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dozen inside community 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good dozen: \n",
+      "DrDenaGrayson\n",
+      "3\n",
+      "ashishkjha\n",
+      "0\n",
+      "edyong209\n",
+      "0\n",
+      "HelenBranswell\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Good dozen: \")\n",
+    "for i in louvain_1:\n",
+    "    if i in list(good_dozen[\"screen_name\"]) or i in list(bad_dozen[\"screen_name\"]):\n",
+    "        print(i)\n",
+    "        print(louvain_1.get(i))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -461,7 +460,7 @@
     "val = rt_community(good_rt_flt_1, louvain_1)\n",
     "print(f\"Utenti che retweettano i Good Dozen : {val.sum()}, il {round(val.sum()/comm.sum()*100,2)}% sulla network\")\n",
     "print(f\"{round(val.sum()/len(good_rt)*100,2)}% sul totale degli utenti che retweettano i Good Dozen\")\n",
-    "plot_hist(val, \"Number of community for user who retweet GOOD DOZEN (inside network 1)\", \"steelblue\")\n"
+    "plot_hist(val, \"Number of community for user who retweet GOOD DOZEN (inside network 1)\", \"steelblue\")"
    ]
   },
   {
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -489,16 +488,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  1.3517314999999996\n"
+      "Time:  2.0643945000001622\n",
+      "Time:  0.8938808999996581\n"
      ]
     }
    ],
    "source": [
     "path_inside = path + \"/network_2/\"\n",
     "louvain_path = glob.glob(path_inside + \"louvain*.json\")[0]\n",
+    "deg_path = glob.glob(path_inside + \"degree.json\")[0]\n",
+    "degree_2 = read_from_json(deg_path)\n",
     "louvain_2 = read_from_json(louvain_path)\n",
     "ccdh_rt_flt_2 = ccdh_rt[ccdh_rt.user_screen_name.isin([x for x in louvain_2])]\n",
-    "good_rt_flt_2 = good_rt[good_rt.user_screen_name.isin([x for x in louvain_2])]"
+    "good_rt_flt_2 = good_rt[good_rt.user_screen_name.isin([x for x in louvain_2])]\n",
+    "# to_remove = ccdh_rt[~ccdh_rt.user_screen_name.isin([x for x in louvain_2])]"
    ]
   },
   {
@@ -569,6 +572,193 @@
     "    s = s + i \n",
     "print(f\"le prime 5 subcommunities sono il {round(s/comm.sum()*100,2)}% del totale nella network_1\")\n",
     "print(f\"il numero di utenti è {comm.sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dozen inside community 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bad dozen:\n",
+      "unhealthytruth\n",
+      "6\n",
+      "BusyDrT\n",
+      "6\n",
+      "RobertKennedyJr\n",
+      "6\n",
+      "mercola\n",
+      "6\n",
+      "kevdjenkins1\n",
+      "6\n",
+      "DrButtar\n",
+      "6\n",
+      "DrChrisNorthrup\n",
+      "6\n",
+      "---------------\n",
+      "Good dozen:\n",
+      "trvrb\n",
+      "3\n",
+      "CDCDirector\n",
+      "3\n",
+      "MackayIM\n",
+      "3\n",
+      "DrEricDing\n",
+      "3\n",
+      "IlonaKickbusch\n",
+      "3\n",
+      "kakape\n",
+      "3\n",
+      "mlipsitch\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bad dozen:\")\n",
+    "for i in louvain_2:\n",
+    "    if i in list(bad_dozen[\"screen_name\"]):\n",
+    "        print(i)\n",
+    "        print(louvain_2.get(\n",
+    "            i))\n",
+    "print(\"---------------\")\n",
+    "print(\"Good dozen:\")\n",
+    "for i in louvain_2:\n",
+    "    if i in list(good_dozen[\"screen_name\"]):\n",
+    "        print(i)\n",
+    "        print(louvain_2.get(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subcommunities 3 and 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_3 = []\n",
+    "lst_6 = []\n",
+    "lst_0 = []\n",
+    "for i in louvain_2:\n",
+    "    if louvain_2.get(i) == 3:\n",
+    "        lst_3.append(i)\n",
+    "    if louvain_2.get(i) == 6:\n",
+    "        lst_6.append(i)\n",
+    "    if louvain_2.get(i) == 0:\n",
+    "        lst_0.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Reuters', 26159]\n",
+      "['business', 19165]\n",
+      "['BNODesk', 17867]\n",
+      "['Quicktake', 15586]\n",
+      "['AFP', 12154]\n",
+      "['DrEricDing', 10886]\n",
+      "['SCMPNews', 10245]\n",
+      "['RT_com', 9062]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in degree_2[:50]:#primi 50 8\n",
+    "    if i[0] in lst_3:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BorisJohnson', 5512]\n",
+      "['PeterSweden7', 5492]\n",
+      "['Telegraph', 4390]\n",
+      "['RitaPanahi', 3659]\n",
+      "['Nigel_Farage', 3096]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in degree_2[:200]: #primi 50 vuota, primi 100 solo 2, primi 200 5\n",
+    "    if i[0] in lst_6:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['charliekirk11', 48772]\n",
+      "['RealJamesWoods', 39572]\n",
+      "['RealCandaceO', 26250]\n",
+      "['IngrahamAngle', 23611]\n",
+      "['DonaldJTrumpJr', 22898]\n",
+      "['GOPLeader', 21207]\n",
+      "['JackPosobiec', 19786]\n",
+      "['RyanAFournier', 18852]\n",
+      "['PrisonPlanet', 15460]\n",
+      "['WhiteHouse45', 13272]\n",
+      "['TomFitton', 13122]\n",
+      "['brithume', 12885]\n",
+      "['bennyjohnson', 12463]\n",
+      "['catturd2', 11894]\n",
+      "['marklevinshow', 11780]\n",
+      "['TrumpWarRoom', 11355]\n",
+      "['jsolomonReports', 11232]\n",
+      "['GOP', 11228]\n",
+      "['tedcruz', 10853]\n",
+      "['DineshDSouza', 10631]\n",
+      "['ChuckCallesto', 10379]\n",
+      "['johncardillo', 10139]\n",
+      "['EricTrump', 9986]\n",
+      "['PressSec45', 9594]\n",
+      "['RealSaavedra', 9524]\n",
+      "['benshapiro', 9513]\n",
+      "['atensnut', 9362]\n",
+      "['SecPompeo', 8851]\n",
+      "['SaraCarterDC', 8846]\n",
+      "['RudyGiuliani', 8696]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in degree_2[:50]: #primi 50 30\n",
+    "    if i[0] in lst_0:\n",
+    "        print(i)"
    ]
   },
   {
@@ -650,14 +840,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  0.8295163999999993\n"
+      "Time:  0.5268777\n"
      ]
     }
    ],
@@ -698,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -740,9 +930,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Dozen inside community 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DrTedros\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in louvain_19:\n",
+    "    if i in list(good_dozen[\"screen_name\"]) or i in list(bad_dozen[\"screen_name\"]):\n",
+    "        print(i)\n",
+    "        print(louvain_19.get(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -777,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -807,6 +1027,20 @@
     "print(f\"{round(val.sum()/len(good_rt)*100,2)}% sul totale degli utenti che retweettano i Good Dozen\")\n",
     "plot_hist(val, \"Number of community for user who retweet GOOD DOZEN (inside network 19)\", \"steelblue\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
