--- a/notebook/Process_Tweets.ipynb
+++ b/notebook/Process_Tweets.ipynb
@@ -67,11 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "['F:/Supsi/COVID-19-Tweets\\\\2020-01\\\\tweets.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-02\\\\tweets.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-03\\\\tweets.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-04\\\\tweets.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-05\\\\tweets.csv']"
+       "[]"
       ]
      },
      "execution_count": 3,
@@ -2575,65 +2571,27 @@
    },
    "outputs": [],
    "source": [
-    "# result = []\n",
-    "# len_rt = 0\n",
-    "# checksum_rt = 0\n",
-    "# importlib.reload(tweets_utils)\n",
-    "# start_time = time.perf_counter()\n",
-    "# j = 0\n",
-    "# for filename in files_tweets:\n",
-    "#     print(f\"Reading file: {filename}\")\n",
-    "#     result.extend(tweets_utils.process_all_data(filename, cols, True))\n",
-    "#     lista = result[j]\n",
-    "#     j = j + 1\n",
-    "#     print(f\"Mese numero {j}\")\n",
-    "#     for i in range(len(lista)):\n",
+    "result = []\n",
+    "len_rt = 0\n",
+    "checksum_rt = 0\n",
+    "importlib.reload(tweets_utils)\n",
+    "start_time = time.perf_counter()\n",
+    "j = 0\n",
+    "for filename in files_tweets:\n",
+    "    print(f\"Reading file: {filename}\")\n",
+    "    result.extend(tweets_utils.process_all_data(filename, cols, True))\n",
+    "    lista = result[j]\n",
+    "    j = j + 1\n",
+    "    print(f\"Mese numero {j}\")\n",
+    "    for i in range(len(lista)):\n",
     "\n",
-    "#         len_rt = len_rt + lista[i][\"rt_len\"] \n",
-    "#         checksum_rt = checksum_rt + lista[i][\"quotes_rt_len\"]\n",
+    "        len_rt = len_rt + lista[i][\"rt_len\"] \n",
+    "        checksum_rt = checksum_rt + lista[i][\"quotes_rt_len\"]\n",
     "\n",
-    "# stop_time = time.perf_counter()\n",
-    "# print(\"Time: \",stop_time-start_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "checksum_rt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48312504"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len_rt"
+    "stop_time = time.perf_counter()\n",
+    "print(\"Time: \",stop_time-start_time)\n",
+    "print(checksum_rt)\n",
+    "print(len_rt)"
    ]
   },
   {
