--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -1284,141 +1284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>degree</th>\n",
-       "      <th>community</th>\n",
-       "      <th>subcommunity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tedlieu</td>\n",
-       "      <td>60191</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>funder</td>\n",
-       "      <td>51566</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>maddow</td>\n",
-       "      <td>44509</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>kylegriffin1</td>\n",
-       "      <td>39583</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>RepAdamSchiff</td>\n",
-       "      <td>30451</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>WHO</td>\n",
-       "      <td>22220</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>DrTedros</td>\n",
-       "      <td>10231</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>WHOAFRO</td>\n",
-       "      <td>1093</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>WebMD</td>\n",
-       "      <td>926</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>WHOEMRO</td>\n",
-       "      <td>862</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>75 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             name  degree  community  subcommunity\n",
-       "0         tedlieu   60191          1             3\n",
-       "1          funder   51566          1             3\n",
-       "2          maddow   44509          1             3\n",
-       "3    kylegriffin1   39583          1             3\n",
-       "4   RepAdamSchiff   30451          1             3\n",
-       "..            ...     ...        ...           ...\n",
-       "70            WHO   22220         19             3\n",
-       "71       DrTedros   10231         19             3\n",
-       "72        WHOAFRO    1093         19             3\n",
-       "73          WebMD     926         19             3\n",
-       "74        WHOEMRO     862         19             3\n",
-       "\n",
-       "[75 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lst_5 = []\n",
     "lst_18 = []\n",
@@ -1443,40 +1311,7 @@
     "df_info = df_info.append(df_from_degree(degree=degree_19, lst_subcomm=lst_2, community=19, subcomm=2))\n",
     "df_info = df_info.append(df_from_degree(degree=degree_19, lst_subcomm=lst_3, community=19, subcomm=3))\n",
     "df_info = df_info.reset_index(drop=True)\n",
-    "df_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lst_desc.extend([\"nigerian government\"\n",
-    ", \"nigerian doctor\" \n",
-    ", \"nigerian doctor\"\n",
-    ", \"nigerian news\"\n",
-    ", \"nigerian activist\"\n",
-    ", \"southafrican news\" \n",
-    ",\"southafrican advocate (suspended)\"\n",
-    ", \"southafrican health minister\"\n",
-    ", \"african news\"\n",
-    ", \"southafrican politician\"\n",
-    ", \"kenya news\"\n",
-    ", \"african news\"\n",
-    ", \"journalist\"\n",
-    ", \"african news\"\n",
-    ", \"african politician\"\n",
-    ", \"organization\"\n",
-    ", \"organization\"\n",
-    ", \"un segretary\"\n",
-    ", \"organization\"\n",
-    ", \"organization\"\n",
-    ", \"organization\"\n",
-    ", \"who director\"\n",
-    ", \"organization\"\n",
-    ", \"orgnization\"\n",
-    ",\"organization\"])"
+    "# df_info"
    ]
   },
   {
@@ -1595,8 +1430,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 101,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1627,86 +1464,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tedlieu</td>\n",
-       "      <td>60191</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>politician (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>funder</td>\n",
-       "      <td>51566</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>politician (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>maddow</td>\n",
-       "      <td>44509</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>MSNBC (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>kylegriffin1</td>\n",
-       "      <td>39583</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>MSNBC (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>RepAdamSchiff</td>\n",
-       "      <td>30451</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>politician (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>JuddLegum</td>\n",
-       "      <td>32246</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>journalist (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>chrislhayes</td>\n",
-       "      <td>30997</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSNBC (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ewarren</td>\n",
-       "      <td>26499</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>politician (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ASlavitt</td>\n",
-       "      <td>19939</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>involved in politics (dem)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>brianschatz</td>\n",
-       "      <td>16925</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>politician (dem)</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>CNN</td>\n",
@@ -1747,54 +1504,72 @@
        "      <td>2</td>\n",
        "      <td>news</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>UN</td>\n",
+       "      <td>4015</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>UNICEF</td>\n",
+       "      <td>2606</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>antonioguterres</td>\n",
+       "      <td>2535</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>un segretary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>UN_Women</td>\n",
+       "      <td>1369</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>WorldBank</td>\n",
+       "      <td>699</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name  degree  community  subcommunity  \\\n",
-       "0          tedlieu   60191          1             3   \n",
-       "1           funder   51566          1             3   \n",
-       "2           maddow   44509          1             3   \n",
-       "3     kylegriffin1   39583          1             3   \n",
-       "4    RepAdamSchiff   30451          1             3   \n",
-       "5        JuddLegum   32246          1             0   \n",
-       "6      chrislhayes   30997          1             0   \n",
-       "7          ewarren   26499          1             0   \n",
-       "8         ASlavitt   19939          1             0   \n",
-       "9      brianschatz   16925          1             0   \n",
-       "10             CNN   48193          1             2   \n",
-       "11         nytimes   31924          1             2   \n",
-       "12             NPR   20376          1             2   \n",
-       "13  washingtonpost   19579          1             2   \n",
-       "14             ABC   19097          1             2   \n",
-       "\n",
-       "                   description  \n",
-       "0             politician (dem)  \n",
-       "1             politician (dem)  \n",
-       "2                  MSNBC (dem)  \n",
-       "3                  MSNBC (dem)  \n",
-       "4             politician (dem)  \n",
-       "5             journalist (dem)  \n",
-       "6                  MSNBC (dem)  \n",
-       "7             politician (dem)  \n",
-       "8   involved in politics (dem)  \n",
-       "9             politician (dem)  \n",
-       "10                        news  \n",
-       "11                        news  \n",
-       "12                        news  \n",
-       "13                        news  \n",
-       "14                        news  "
+       "               name  degree  community  subcommunity   description\n",
+       "10              CNN   48193          1             2          news\n",
+       "11          nytimes   31924          1             2          news\n",
+       "12              NPR   20376          1             2          news\n",
+       "13   washingtonpost   19579          1             2          news\n",
+       "14              ABC   19097          1             2          news\n",
+       "65               UN    4015         19             2  organization\n",
+       "66           UNICEF    2606         19             2  organization\n",
+       "67  antonioguterres    2535         19             2  un segretary\n",
+       "68         UN_Women    1369         19             2  organization\n",
+       "69        WorldBank     699         19             2  organization"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/subcommunities_w_desc.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "df.head(15)"
+    "df[df[\"subcommunity\"]==2]"
    ]
   },
   {
