Start community - degree - score study

--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -41,6 +41,7 @@
     "import seaborn as sns\n",
     "import re\n",
     "from operator import itemgetter\n",
+    "import matplotlib as mpl \n",
     "import matplotlib.cm as mcm\n",
     "import community\n",
     "from community import community_louvain as cm\n",
