Add sage implementation

--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -1443,9 +1443,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1478,44 +1478,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>CNN</td>\n",
-       "      <td>48193</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>news</td>\n",
+       "      <th>50</th>\n",
+       "      <td>NCDCgov</td>\n",
+       "      <td>21397</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nigerian government</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>nytimes</td>\n",
-       "      <td>31924</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>news</td>\n",
+       "      <th>51</th>\n",
+       "      <td>DrOlufunmilayo</td>\n",
+       "      <td>14401</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nigerian doctor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>NPR</td>\n",
-       "      <td>20376</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>news</td>\n",
+       "      <th>52</th>\n",
+       "      <td>aproko_doctor</td>\n",
+       "      <td>7662</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nigerian doctor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>washingtonpost</td>\n",
-       "      <td>19579</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>news</td>\n",
+       "      <th>53</th>\n",
+       "      <td>MobilePunch</td>\n",
+       "      <td>6605</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nigerian news</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>ABC</td>\n",
-       "      <td>19097</td>\n",
+       "      <th>54</th>\n",
+       "      <td>segalink</td>\n",
+       "      <td>6536</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nigerian activist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>News24</td>\n",
+       "      <td>7078</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>southafrican news</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>AdvoBarryRoux</td>\n",
+       "      <td>5702</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>southafrican advocate (suspended)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>DrZweliMkhize</td>\n",
+       "      <td>5498</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>southafrican health minister</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>eNCA</td>\n",
+       "      <td>3132</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>african news</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>MbuyiseniNdlozi</td>\n",
+       "      <td>2974</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>southafrican politician</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>citizentvkenya</td>\n",
+       "      <td>3085</td>\n",
+       "      <td>19</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>news</td>\n",
+       "      <td>kenya news</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>NationBreaking</td>\n",
+       "      <td>3063</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>african news</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>samirasawlani</td>\n",
+       "      <td>2252</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>journalist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>NationAfrica</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>african news</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>RobertAlai</td>\n",
+       "      <td>1908</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>african politician</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>65</th>\n",
@@ -1557,32 +1637,115 @@
        "      <td>2</td>\n",
        "      <td>organization</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>WHO</td>\n",
+       "      <td>22220</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>DrTedros</td>\n",
+       "      <td>10231</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>who director</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>WHOAFRO</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>WebMD</td>\n",
+       "      <td>926</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>orgnization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>WHOEMRO</td>\n",
+       "      <td>862</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>organization</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               name  degree  community  subcommunity   description\n",
-       "10              CNN   48193          1             2          news\n",
-       "11          nytimes   31924          1             2          news\n",
-       "12              NPR   20376          1             2          news\n",
-       "13   washingtonpost   19579          1             2          news\n",
-       "14              ABC   19097          1             2          news\n",
-       "65               UN    4015         19             2  organization\n",
-       "66           UNICEF    2606         19             2  organization\n",
-       "67  antonioguterres    2535         19             2  un segretary\n",
-       "68         UN_Women    1369         19             2  organization\n",
-       "69        WorldBank     699         19             2  organization"
+       "               name  degree  community  subcommunity  \\\n",
+       "50          NCDCgov   21397         19             5   \n",
+       "51   DrOlufunmilayo   14401         19             5   \n",
+       "52    aproko_doctor    7662         19             5   \n",
+       "53      MobilePunch    6605         19             5   \n",
+       "54         segalink    6536         19             5   \n",
+       "55           News24    7078         19            18   \n",
+       "56    AdvoBarryRoux    5702         19            18   \n",
+       "57    DrZweliMkhize    5498         19            18   \n",
+       "58             eNCA    3132         19            18   \n",
+       "59  MbuyiseniNdlozi    2974         19            18   \n",
+       "60   citizentvkenya    3085         19             1   \n",
+       "61   NationBreaking    3063         19             1   \n",
+       "62    samirasawlani    2252         19             1   \n",
+       "63     NationAfrica    1925         19             1   \n",
+       "64       RobertAlai    1908         19             1   \n",
+       "65               UN    4015         19             2   \n",
+       "66           UNICEF    2606         19             2   \n",
+       "67  antonioguterres    2535         19             2   \n",
+       "68         UN_Women    1369         19             2   \n",
+       "69        WorldBank     699         19             2   \n",
+       "70              WHO   22220         19             3   \n",
+       "71         DrTedros   10231         19             3   \n",
+       "72          WHOAFRO    1093         19             3   \n",
+       "73            WebMD     926         19             3   \n",
+       "74          WHOEMRO     862         19             3   \n",
+       "\n",
+       "                          description  \n",
+       "50                nigerian government  \n",
+       "51                    nigerian doctor  \n",
+       "52                    nigerian doctor  \n",
+       "53                      nigerian news  \n",
+       "54                  nigerian activist  \n",
+       "55                  southafrican news  \n",
+       "56  southafrican advocate (suspended)  \n",
+       "57       southafrican health minister  \n",
+       "58                       african news  \n",
+       "59            southafrican politician  \n",
+       "60                         kenya news  \n",
+       "61                       african news  \n",
+       "62                         journalist  \n",
+       "63                       african news  \n",
+       "64                 african politician  \n",
+       "65                       organization  \n",
+       "66                       organization  \n",
+       "67                       un segretary  \n",
+       "68                       organization  \n",
+       "69                       organization  \n",
+       "70                       organization  \n",
+       "71                       who director  \n",
+       "72                       organization  \n",
+       "73                        orgnization  \n",
+       "74                       organization  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/subcommunities_w_desc.csv\", lineterminator=\"\\n\", low_memory=False)\n",
-    "df[df[\"subcommunity\"]==2]"
+    "# df = pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/subcommunities_w_desc.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "df[df[\"community\"]==19]\n",
+    "# df"
    ]
   },
   {
